+ Fixed the portrait preview not working when the chat is moved from its original corner.
+ Fixed the portrait preview not working when the character rejoins the server.
+ Removed the limit of players drawn on the DM tab.